--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" data-beasties-container>
   <head>
-    <title>Anusham Feb 2026 - Spiritual Media Gallery</title>
+    <title>அனுஷம் பிப்ரவரி 2026</title>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A spiritual journey through sacred images, devotional videos, and prayer audio">
+    
+    <!-- Primary Meta -->
+    <meta name="description" content="Anusham Feb 2026">
     <base href="/AnushamFeb2026/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
     <meta property="og:title" content="Anusham Feb 2026">
-    <meta property="og:description" content="A spiritual journey through sacred images, devotional videos, and prayer audio">
-  
-  <style>*{margin:0;padding:0;box-sizing:border-box}body{font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;line-height:1.6;color:#333;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}</style><link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.css"></noscript></head>
+    <meta property="og:description" content="Anusham Feb 2026">
+    <meta property="og:image" content="https://raw.githubusercontent.com/vrsaparna/anusham-feb11/main/Images/photo1.jpeg">
+    <meta property="og:url" content="YOUR_ACTUAL_DEPLOY_URL">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Anusham Feb 2026">
+    <meta name="twitter:description" content="Anusham Feb 2026">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/vrsaparna/anusham-feb11/main/Images/photo1.jpeg">
+
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, 
+                     Helvetica Neue, Arial, sans-serif;
+        line-height: 1.6;
+        color: #333;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+    </style>
+
+    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
+    <noscript>
+      <link rel="stylesheet" href="styles.css">
+    </noscript>
+  </head>
+
   <body>
     <app-root>
       <div style="display: flex; align-items: center; justify-content: center; height: 100vh; font-family: sans-serif; color: #667eea;">
@@ -19,5 +53,7 @@
         </div>
       </div>
     </app-root>
-  <script src="main.js" type="module"></script></body>
+
+    <script src="main.js" type="module"></script>
+  </body>
 </html>
